CPO-17 Create initial Functional Test library
   [CPO-17](https://tools.hmcts.net/jira/browse/CPO-17)

Create initial Functional / Smoke tests library for CPO.